--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-web": "~0.19.6",
     "react-dom": "18.2.0",
     "@expo/webpack-config": "^19.0.0",
-    "react-native-reanimated": "~3.3.0"
+    "react-native-reanimated": "~3.3.0",
+    "react-native-gesture-handler": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
